methods.flowerpot.FlowerPot.scala.code
def growFlowers()
{
  /**
	*Dessine une fleur en partant du petale du bas, il faut choisir la couleur avant de lancer la fonction
  */
  
  baisseBrosse()
  avance(2)
  recule()
  gauche()
  avance()
  droite(2)
  avance(2)
  droite(2)
  avance()
  setCouleurBrosse(Color.YELLOW)
  leveBrosse()
  droite()
  recule()
    
}
growFlowers()